frontend/test/should_pass/constr_model_001.gm
node class Font {
	fontname   : string  = "Verdana";
	height     : int     = 10;
	bold       : boolean;
	italic     : boolean;
	underlined : boolean;

	Font(height, fontname="Arial", bold=false, italic=false, underlined=false);
	Font(fontname);
}
